--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <version>3.23.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>com.openhtmltopdf</groupId>
+          <artifactId>openhtmltopdf-core</artifactId>
+          <version>0.0.1-RC9</version>
+      </dependency>
   </dependencies>
 
   <build>
