--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
           <artifactId>openhtmltopdf-core</artifactId>
           <version>0.0.1-RC9</version>
       </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
